cabal-version: 2.4

name: caltrop
version: 0.0.0

category: Plugin
description: Caltrop is an experimental GHC plugin.
license: ISC
maintainer: Taylor Fausak
synopsis: An experimental GHC plugin.

library
  build-depends:
    base ^>= 4.12.0,
    ghc ^>= 8.6.3,
  default-language: Haskell2010
  exposed-modules: Caltrop
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-unsafe
